--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "glob": "^11.0.1",
-    "mongoose": "^8.12.1"
+    "mongoose": "^8.12.1",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
